fixed 71-270 lines in Store texts

--- a/core/i18n/resource/countries.json
+++ b/core/i18n/resource/countries.json
@@ -124,7 +124,7 @@
     "code": "IO"
   },
   {
-    "name": "British Virgin Islands",
+    "name": "The British Virgin Islands",
     "code": "VG"
   },
   {
