--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -69,71 +69,350 @@
 "The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","Продуктът, категорията или CMS страницата не са достъпни в офлайн режим. Пренасочване към Начало."
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Системата не е сигурна за наличното количество (променливо). Продуктът е добавен в кошницата за предварителна резервация."
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of the ordered products are out of stock.","Съжаляваме, нямаме връзка с интернет. Все още можете да направите поръчката си. В момента не можем да проверим дали някой от поръчаните продукти е изчерпан. Ще ви уведомим при първа възможност!"
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Тази функция все още не е внедрена! Моля, разгледайте https://github.com/DivanteLtd/vue-storefront/isissue за нашата пътна карта!"
-"Thumbnail","Thumbnail"
+"This feature is not implemented yet!","Тази функция все още не е активна!"
+"Thumbnail","Умалено изображение"
 "Type what you are looking for...","Въведете това, което търсите ..."
 "Unexpected authorization error. Check your Network conection.","Неочаквана грешка в авторизацията. Проверете мрежовото си свързване."
-"Unhandled error, wrong response format!","Необработена грешка, грешен формат на отговора!"
-"Vue Storefront"," „Mагазин“"
-"You are going to pay for this order upon delivery.","Вие ще платите за тази поръчка при доставка."
+"Unhandled error, wrong response format!","Неоправена грешка, грешен формат на отговора!"
+"Vue Storefront"," Mагазин"
+"You are going to pay for this order upon delivery.","Ще платите за тази поръчка при доставка."
 "You are logged in!","Влезли сте!"
 "You are to pay for this order upon delivery.","Вие трябва да платите за тази поръчка при доставка."
-"You need to be logged in to see this page","За да видите тази страница, трябва да влезете"
+"You need to be logged in to see this page","За да видите тази страница, трябва да сте влезли в профила си."
 "You submitted your review for moderation.","Изпратихте отзива си за модериране."
-"You're logged out","Излизате"
+"You're logged out","Излезли сте"
 "email","електронна поща"
-"have as many","имат толкова много"
-"login","Влизам"
-"most you may purchase","най-много можете да закупите"
+"login","Влизане"
 "not authorized","неоторизиран"
 "password","парола"
 "to account","към профила"
-"Account for {email} already exists.","Профилът за {email} вече съществува."
-"Store","магазин"
+"An account for {email} already exists.","Профилът за {email} вече съществува."
+"Store","Магазин"
 "Warranty","Гаранция"
-"Policy","политика"
-"Privacy","поверителност"
-"Store","магазин"
-"ProCC Store","ProCC Store"
+"Policy","Политика"
+"Privacy","Поверителност"
+"Store","Магазин"
+"ProCC Store","ProCC Магазин"
 "bust","бюст"
 "waist","талия"
-"hip","хип"
+"hip","ханш"
 "length","дължина"
-"New Product Arrivals","Пристигане на нов продукт"
-"Available soon","Available soon"
-"Login / Registration","Вход / Регистрация"
-"Shipping Total Cost","Обща стойност на доставката"
-"EKONT","EKONT"
-"Rapido","бърз"
-"Limited quantity available","Налично ограничено количество"
-"Limited quantity available","Налично ограничено количество"
-"Address","адрес"
-"Billing Address","адрес на плащане"
+"New Product Arrivals","Нови продукти"
+"Available soon","Очаква се скоро"
+"Login / Registration","Вход/Регистрация"
+"Shipping Total Cost","Доставка Обща стойност"
+"EKONT","Еконт"
+"Rapido","Рапидо"
+"Limited quantity available","Ограничено налично количество"
+"Address","Адрес"
+"Billing Address","Адрес за фактуриране"
 "Shipping Methods","Методи за доставка"
-"Carrier","носител"
+"Carrier","Куриер"
 "Estimated Delivery Time","Очаквано време за доставка"
-"Cost","цена"
-"Tracking","проследяване"
-"Days","дни"
+"Cost","Цена"
+"Tracking","Проследяване"
+"Days","Дни"
 "Estimated Delivery","Очаквана доставка"
 "Calculated","Изчислено"
 "Apply","Приложи"
 "Ok","Добре"
-"invalidCredentials","invalidCredentials"
+"invalidCredentials","невалидни идентификационни данни"
 "Homepage","начална страница"
-"Order Feedback","Поръчка за обратна връзка"
-"Download Invoice","Изтеглете фактура"
-"Retry Payment","Повторно плащане"
+"Order Feedback","Обратна връзка за поръчка"
+"Download Invoice","Изтегляне на фактура"
+"Retry Payment","Повторен опит за плащане"
 "Image","Изображение"
 "Online Payment","Онлайн разплащане"
 "Order Cancellation","Анулиране на поръчка"
 "All Stores","Всички магазини"
-"List of the available ProCC Store Brands","Списък на наличните търговски марки ProCC"
-"noImage","няма изображение"
-"Shipping & Handling","транспорт и доставка"
+"List of the available ProCC Store Brands","Списък на наличните брандове в ProCC"
+"noImage","Няма Изображение"
+"Shipping & Handling","Доставка & Обработка"
 "Bulgaria","България"
 "Configure","Конфигуриране"
 "Contacts","Контакти"
-"Fashion and Stylish Everyday Attire","Модно и стилно ежедневно облекло"
 "8-10","8-10"
-"Bulgaria, Varna","Bulgaria, Varna"
+"Bulgaria, Varna","България, Варна"
+"French","Френски"
+"Spanish","Испански"
+"Dutch","Холандски"
+"Japanese","Японски"
+"Russian","Руски"
+"Portuguese","Португалски"
+"Polish","Полски"
+"Czech","Чешки"
+"Deutsch","Немски"
+"Български","Български"
+"Français","Français"
+"Español","Español"
+"Nederlandse","Nederlandse"
+"日本語","日本語"
+"Русский","Русский"
+"Italiano","Italiano"
+"Português","Português"
+"Polski","Polski"
+"Český","Český"
+"Greece","Гърция"
+"Austria","Австрия"
+"Slovenia","Словения"
+"Croatia","Хърватия"
+"Hungary","Унгария"
+"Poland","Полша"
+"Slovakia","Словакия"
+"Czechia","Czechia"
+"Romania","Румъния"
+"Code must have at least 3 letters.","Кодът трябва да има поне 3 букви"
+"No Options","Няма опции"
+"Loading...","Зареждане..."
+"Please provide a valid city name","Моля, посочете валидно име на град"
+"DPD Austria","DPD Австрия"
+"Place Order","Направи поръчка"
+"Something went wrong :( the payment failed, please retry","Нещо се обърка :( плащането не бе успешно, моля, опитайте отново"
+"We will send you the invoice to","Ще Ви изпратим фактурата до"
+"Invoice to","Фактура до"
+"Pay Online","Платете онлайн"
+"This is not a valid EU VAT Number","Това не е валиден Булстат"
+"as soon as you receive the products and submit a review","веднага щом получите продуктите и изпратите рецензия"
+"Failed to verify your EU VAT Number",Неспешна потвърждаването на вашия Булстат номер "
+"Account for VAT according to your local law","Отчетете ДДС съгласно местното си законодателство"
+"Placing the order failed, please contact support!","Подаването на поръчката не бе успешно, моля, свържете се с поддръжката!"
+"Afghanistan","Афганистан"
+"Albania","Албания"
+"Algeria","Алжирия"
+"American Samoa","Американска Самоа"
+"Andorra","Андора"
+"Angola","Ангола"
+"Anguilla","Ангила"
+"Antarctica","Антарктида"
+"Antigua and Barbuda","Антигуа и Барбуда"
+"Argentina","Аржентина"
+"Armenia","Армения"
+"Aruba","Аруба"
+"Azerbaijan","Азербайджан"
+"Australia","Австралия"
+"Bahamas","Бахамски острови"
+"Bahrain","Бахрейн"
+"Bangladesh","Бангладеш"
+"Barbados","Барбадос"
+"Belarus","Беларус"
+"Belgium","Белгия"
+"Belize","Белиз"
+"Benin","Бенин"
+"Bermuda","Бермуди"
+"Bhutan","Бутан"
+"Bosnia and Herzegovina","Босна и Херцеговина"
+"Bolivia","Боливия"
+"Botswana","Ботсвана"
+"Bouvet Island","Остров Буве"
+"Brazil","Бразилия"
+"British Indian Ocean Territory","Британска територия в Индийския океан"
+"The British Virgin Islands","Британските Вирджински острови"
+"Brunei","Бруней"
+"Burkina Faso","Буркина Фасо"
+"Burundi","Бурунди"
+"Cambodia","Камбоджа"
+"Cameroon","Камерун"
+"Canada","Канада"
+"Cape Verde","Кабо Верде"
+"Cayman Islands","Кайманови острови"
+"Central African Republic","Централноафриканската република"
+"Chad","Чад"
+"China","Китай"
+"Chile","Чили"
+"Christmas Island","Коледен остров"
+"Cocos [Keeling] Islands","Кокосови острови"
+"Comoros","Коморски острови"
+"Congo","Конго"
+"Colombia","Колумбия"
+"Cook Islands","Острови Кук"
+"Costa Rica","Коста Рика"
+"Cuba","Куба"
+"Cyprus","Кипър"
+"Czech Republic","Чехия"
+"Côte d’Ivoire","Кот д'Ивоар"
+"Djibouti","Джибути"
+"Denmark","Дания"
+"Dominica","Доминика"
+"Dominican Republic","Доминиканска република"
+"Ecuador","Еквадор"
+"Egypt","Египет"
+"El Salvador","Ел Салвадор"
+"Equatorial Guinea","Екваториална Гвинея"
+"Eritrea","Еритрея"
+"Estonia","Естония"
+"Ethiopia","Етиопия"
+"Falkland Islands","Фолкландски острови"
+"Faroe Islands","Фарьорските острови"
+"Fiji","Фиджи"
+"Finland","Финландия"
+"France","Франция"
+"French Guiana","Френска Гвиана"
+"French Polynesia","Френска полинезия"
+"Gabon","Габон"
+"French Southern Territories","Френски южни територии"
+"Gambia","Гамбия"
+"Georgia","Грузия"
+"Gibraltar","Гибралтар"
+"Ghana","Гана"
+"Greenland","Гренландия"
+"Guadeloupe","Гваделупа"
+"Guatemala","Гватемала"
+"Grenada","Гренада"
+"Guam","Гуам"
+"Guernsey","Гернси"
+"Guinea","Гвинея"
+"Guyana","Гвиана"
+"Haiti","Хаити"
+"Heard Island and McDonald Islands","Остров Хърд и о-вите Макдоналд"
+"Honduras","Хондурас"
+"Hong Kong SAR China","Хонконг, Китай"
+"Iceland","Исландия"
+"India","Индия"
+"Indonesia","Индонезия"
+"Iran","Iran"
+"Iraq","Iraq"
+"Ireland","Ireland"
+"Isle of Man","Isle of Man"
+"Israel","Israel"
+"Jamaica","Jamaica"
+"Jersey","Jersey"
+"Japan","Japan"
+"Jordan","Jordan"
+"Kazakhstan","Kazakhstan"
+"Kenya","Kenya"
+"Kuwait","Kuwait"
+"Kiribati","Kiribati"
+"Kyrgyzstan","Kyrgyzstan"
+"Laos","Laos"
+"Latvia","Latvia"
+"Lebanon","Lebanon"
+"Lesotho","Lesotho"
+"Liberia","Liberia"
+"Libya","Libya"
+"Liechtenstein","Liechtenstein"
+"Lithuania","Lithuania"
+"Luxembourg","Luxembourg"
+"Macau SAR China","Macau SAR China"
+"Macedonia","Macedonia"
+"Madagascar","Madagascar"
+"Malaysia","Malaysia"
+"Malawi","Malawi"
+"Maldives","Maldives"
+"Mali","Mali"
+"Malta","Malta"
+"Marshall Islands","Marshall Islands"
+"Martinique","Martinique"
+"Mauritania","Mauritania"
+"Mauritius","Mauritius"
+"Mayotte","Mayotte"
+"Micronesia","Micronesia"
+"Mexico","Mexico"
+"Mongolia","Mongolia"
+"Moldova","Moldova"
+"Monaco","Monaco"
+"Montenegro","Montenegro"
+"Montserrat","Montserrat"
+"Morocco","Morocco"
+"Mozambique","Mozambique"
+"Myanmar [Burma]","Myanmar [Burma]"
+"Namibia","Namibia"
+"Nauru","Nauru"
+"Nepal","Nepal"
+"Netherlands Antilles","Netherlands Antilles"
+"Netherlands","Netherlands"
+"New Caledonia","New Caledonia"
+"New Zealand","New Zealand"
+"Nicaragua","Nicaragua"
+"Niger","Niger"
+"Nigeria","Nigeria"
+"Niue","Niue"
+"Norfolk Island","Norfolk Island"
+"North Korea","North Korea"
+"Northern Mariana Islands","Northern Mariana Islands"
+"Norway","Norway"
+"Oman","Oman"
+"Pakistan","Pakistan"
+"Palau","Palau"
+"Palestinian Territories","Palestinian Territories"
+"Panama","Panama"
+"Papua New Guinea","Papua New Guinea"
+"Paraguay","Paraguay"
+"Peru","Peru"
+"Philippines","Philippines"
+"Pitcairn Islands","Pitcairn Islands"
+"Portugal","Portugal"
+"Puerto Rico","Puerto Rico"
+"Qatar","Qatar"
+"Russia","Russia"
+"Rwanda","Rwanda"
+"Réunion","Réunion"
+"Saint Barthélemy","Saint Barthélemy"
+"Saint Helena","Saint Helena"
+"Saint Kitts and Nevis","Saint Kitts and Nevis"
+"Saint Lucia","Saint Lucia"
+"Saint Martin","Saint Martin"
+"Saint Pierre and Miquelon","Saint Pierre and Miquelon"
+"Saint Vincent and the Grenadines","Saint Vincent and the Grenadines"
+"Samoa","Samoa"
+"San Marino","San Marino"
+"Saudi Arabia","Saudi Arabia"
+"Senegal","Senegal"
+"Serbia","Serbia"
+"Seychelles","Seychelles"
+"Sierra Leone","Sierra Leone"
+"Singapore","Singapore"
+"Solomon Islands","Solomon Islands"
+"Somalia","Somalia"
+"South Africa","South Africa"
+"South Georgia and the South Sandwich Islands","South Georgia and the South Sandwich Islands"
+"South Korea","South Korea"
+"Spain","Spain"
+"Sri Lanka","Sri Lanka"
+"Sudan","Sudan"
+"Suriname","Suriname"
+"Svalbard and Jan Mayen","Svalbard and Jan Mayen"
+"Swaziland","Swaziland"
+"Sweden","Sweden"
+"Switzerland","Switzerland"
+"Syria","Syria"
+"São Tomé and Príncipe","São Tomé and Príncipe"
+"Taiwan","Taiwan"
+"Tajikistan","Tajikistan"
+"Tanzania","Tanzania"
+"Thailand","Thailand"
+"Timor","Timor"
+"Togo","Togo"
+"Tokelau","Tokelau"
+"Tonga","Tonga"
+"Trinidad and Tobago","Trinidad and Tobago"
+"Tunisia","Tunisia"
+"Turkey","Turkey"
+"Turkmenistan","Turkmenistan"
+"Turks and Caicos Islands","Turks and Caicos Islands"
+"U.S. Minor Outlying Islands","U.S. Minor Outlying Islands"
+"Tuvalu","Tuvalu"
+"U.S. Virgin Islands","U.S. Virgin Islands"
+"Uganda","Uganda"
+"Ukraine","Ukraine"
+"United Arab Emirates","United Arab Emirates"
+"United Kingdom","United Kingdom"
+"Uruguay","Uruguay"
+"Uzbekistan","Uzbekistan"
+"Vanuatu","Vanuatu"
+"Vatican City","Vatican City"
+"Venezuela","Venezuela"
+"Vietnam","Vietnam"
+"Wallis and Futuna","Wallis and Futuna"
+"Western Sahara","Western Sahara"
+"Yemen","Yemen"
+"Zambia","Zambia"
+"Zimbabwe","Zimbabwe"
+"Åland Islands","Åland Islands"
+"Transaction is being processed","Transaction is being processed"
+"Please Wait...","Please Wait..."
+"What are the next steps?","What are the next steps?"
+"Shipping Address","Shipping Address"
+"FAQ","FAQ"
+"Suggested Products","Suggested Products"
+"Shipping Fee","Shipping Fee"
+"VAT (Included)","VAT (Included)"
