--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -69,7 +69,7 @@
 "The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation."
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!"
+"This feature is not implemented yet!","This feature is not implemented yet!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Type what you are looking for..."
 "Unexpected authorization error. Check your Network conection.","Unexpected authorization error. Check your Network conection."
@@ -82,74 +82,11 @@
 "You submitted your review for moderation.","You submitted your review for moderation."
 "You're logged out","You're logged out"
 "email","email"
-"have as many","have as many"
 "login","login"
-"most you may purchase","most you may purchase"
 "not authorized","not authorized"
 "password","password"
 "to account","to account"
-"Account for {email} already exists.","Account for {email} already exists."
-" is out of stock!"," is out of stock!"
-"404 Page Not Found","404 Page Not Found"
-"Account data has successfully been updated","Account data has successfully been updated"
-"Add review","Add review"
-"Adding a review ...","Adding a review ..."
-"The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled."
-"Enable order notification","Enable order notification"
-"Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
-"Checkout","Checkout"
-"Columns","Columns"
-"Compare Products","Compare Products"
-"Compare products","Compare products"
-"Confirm your order","Confirm your order"
-"Error refreshing user token. User is not authorized to access the resource","Error refreshing user token. User is not authorized to access the resource"
-"Error with response - bad content-type!","Error with response - bad content-type!"
-"Error: Error while adding products","Error: Error while adding products"
-"Extension developers would like to thank you for placing an order!","Extension developers would like to thank you for placing an order!"
-"Product {productName} has been added to Compare!","Product {productName} has been added to Compare!"
-"Product {productName} has been added to Wishlist!","Product {productName} has been added to Wishlist!"
-"Product {productName} has been removed from Compare!","Product {productName} has been removed from Compare!"
-"Product {productName} has been removed from Wishlist!","Product {productName} has been removed from Wishlist!"
-"Quantity available offline","Quantity (offline mode)"
-"Quantity available","Quantity ({qty} available)"
-"Quantity must be above 0","Quantity must be above 0"
-"Quantity must be below {quantity}","Quantity must be below {quantity}"
-"Quantity must be positive integer","Quantity must be positive integer"
-"Registering the account ...","Registering the account ..."
-"The reset password feature does not work while offline!","The reset password feature does not work while offline!"
-"Review","Review"
-"Reviews","Reviews"
-"Select 0","Select 0"
-"Select 1","Select 1"
-"Shopping cart is empty. Please add some products before entering Checkout","Shopping cart is empty. Please add some products before entering Checkout"
-"Some of the ordered products are not available!","Some of the ordered products are not available!"
-"Please wait while we check for available stock quantities","Please wait while we check for available stock quantities"
-"Subtotal incl. tax","Subtotal incl. tax"
-"Summary","Summary"
-"The product is out of stock and cannot be added to Cart!","The product is out of stock and cannot be added to Cart!"
-"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
-"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation."
-"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!"
-"Thumbnail","Thumbnail"
-"Type what you are looking for...","Type what you are looking for..."
-"Unexpected authorization error. Check your Network conection.","Unexpected authorization error. Check your Network conection."
-"Unhandled error, wrong response format!","Unhandled error, wrong response format!"
-"Vue Storefront", "Vue Storefront"
-"You are going to pay for this order upon delivery.","You are going to pay for this order upon delivery."
-"You are logged in!","You are logged in!"
-"You are to pay for this order upon delivery.","You are to pay for this order upon delivery."
-"You need to be logged in to see this page","You need to be logged in to see this page"
-"You submitted your review for moderation.","You submitted your review for moderation."
-"You're logged out","You're logged out"
-"email","email"
-"have as many","have as many"
-"login","login"
-"most you may purchase","most you may purchase"
-"not authorized","not authorized"
-"password","password"
-"to account","to account"
-"Account for {email} already exists.","Account for {email} already exists."
+"An account for {email} already exists.","An account for {email} already exists."
 "Store","Store"
 "Warranty","Warranty"
 "Policy","Policy"
@@ -166,7 +103,6 @@
 "Shipping Total Cost","Shipping Total Cost"
 "EKONT","EKONT"
 "Rapido","Rapido"
-"Limited quantity available","Limited quantity available"
 "Limited quantity available","Limited quantity available"
 "Address","Address"
 "Billing Address","Billing Address"
@@ -190,12 +126,11 @@
 "Order Cancellation","Order Cancellation"
 "All Stores","All Stores"
 "List of the available ProCC Store Brands","List of the available ProCC Store Brands"
-"noImage","noImage"
+"noImage","No Image"
 "Shipping & Handling","Shipping & Handling"
 "Bulgaria","Bulgaria"
 "Configure","Configure"
 "Contacts","Contacts"
-"Fashion and Stylish Everyday Attire","Fashion and Stylish Everyday Attire"
 "8-10","8-10"
 "Bulgaria, Varna","Bulgaria, Varna"
 "French","French"
@@ -206,7 +141,6 @@
 "Portuguese","Portuguese"
 "Polish","Polish"
 "Czech","Czech"
-"French","French"
 "Deutsch","Deutsch"
 "Български","Български"
 "Français","Français"
@@ -230,12 +164,11 @@
 "Code must have at least 3 letters.","Code must have at least 3 letters."
 "No Options","No Options"
 "Loading...","Loading..."
-"Please provide valid city name","Please provide valid city name"
+"Please provide a valid city name","Please provide a valid city name"
 "DPD Austria","DPD Austria"
 "Place Order","Place Order"
-"Something goes Wrong :(  payment fail, please retry","Something goes Wrong :(  payment fail, please retry"
-"We will send you the invoice to ","We will send you the invoice to "
-"as soon as you receive the products and rate them","as soon as you receive the products and rate them"
+"Something went wrong :( the payment failed, please retry","Something went wrong :( the payment failed, please retry"
+"We will send you the invoice to","We will send you the invoice to"
 "Invoice to","Invoice to"
 "Pay Online","Pay Online"
 "This is not a valid EU VAT Number","This is not a valid EU VAT Number"
@@ -243,7 +176,6 @@
 "Failed to verify your EU VAT Number","Failed to verify your EU VAT Number"
 "Account for VAT according to your local law","Account for VAT according to your local law"
 "Placing the order failed, please contact support!","Placing the order failed, please contact support!"
-"addressUpdated","Address was updated"
 "Afghanistan","Afghanistan"
 "Albania","Albania"
 "Algeria","Algeria"
@@ -274,7 +206,7 @@
 "Bouvet Island","Bouvet Island"
 "Brazil","Brazil"
 "British Indian Ocean Territory","British Indian Ocean Territory"
-"British Virgin Islands","British Virgin Islands"
+"The British Virgin Islands","The British Virgin Islands"
 "Brunei","Brunei"
 "Burkina Faso","Burkina Faso"
 "Burundi","Burundi"
@@ -328,7 +260,6 @@
 "Grenada","Grenada"
 "Guam","Guam"
 "Guernsey","Guernsey"
-"Guinea","Guinea"
 "Guinea","Guinea"
 "Guyana","Guyana"
 "Haiti","Haiti"
