--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -306,5 +306,5 @@
 "Save my Payment Information in accordance with ProCC's Privacy Policy","Save my Payment Information in accordance with ProCC's Privacy Policy"
 "Save to Account","Save to Account"
 "feedbackSaved","Thank you"
-"Account for {email} already exists.","Account for {email} already exists."
+"An account for {email} already exists.","An account for {email} already exists."
 
