--- a/core/i18n/resource/i18n/cs-CZ.csv
+++ b/core/i18n/resource/i18n/cs-CZ.csv
@@ -54,7 +54,7 @@
 "The product is out of stock and cannot be added to Cart!","Produkt není na skladě a nelze ho přidat do košíku!"
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Systém si není jistý množstvím zásob (volatilní). Produkt byl přidán do košíku pro předběžnou rezervaci."
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Připojení k internetu není k dispozici. Stále si však můžete zboží objednat. Budeme vás informovat v případě, že některý z objednaných produktů není k dispozici, protože to v současnosti nelze zkontrolovat."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Tato funkce zatím nebyla zavedena! Prosíme, podívejte se na https://github.com/DivanteLtd/vue-storefront/issues pro podrobný návod!"
+"This feature is not implemented yet!","Tato funkce zatím nebyla zavedena!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Zadejte, co hledáte..."
 "Unhandled error, wrong response format!","Neošetřená chyba, nesprávný formát odpovědi!"
@@ -64,9 +64,7 @@
 "You submitted your review for moderation.","You submitted your review for moderation."
 "You're logged out","Jste odhlášeni"
 "email","email"
-"have as many","mít tolik"
 "login","přihlásit se"
-"most you may purchase","nejvíce co si můžete koupit"
 "not authorized","neautorizováno"
 "password","heslo"
 "to account","na účet"
