--- a/core/i18n/resource/i18n/it-IT.csv
+++ b/core/i18n/resource/i18n/it-IT.csv
@@ -68,7 +68,7 @@
 "The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Il sistema non è sicuro della disponibilità del prodotto (volatile). Il prodotto è stato aggiunto al carrello per prenotazione"
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Non sei connesso ad internet ma puoi ugualmente procedere con l'ordine. Non è possibile verificare adesso la disponibilità dei prodotti, se qualcuno dei prodotti ordinati non sarà più disponibile te lo faremo sapere."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Questa funzionalità non è ancora stata implementata! Dai un'occhiata alla nostra roadmap qui https://github.com/DivanteLtd/vue-storefront/issues!"
+"This feature is not implemented yet!","Questa funzionalità non è ancora stata implementata!"
 "Thumbnail","Miniatura"
 "Type what you are looking for...","Cerca nel catalogo..."
 "Unexpected authorization error. Check your Network conection.","Errore di autorizzazione inaspettato. Verifica la tua connesione."
@@ -81,9 +81,7 @@
 "You submitted your review for moderation.","You submitted your review for moderation."
 "You're logged out","Ti sei disconnesso"
 "email","email"
-"have as many","have as many"
 "login","accedi"
-"most you may purchase","most you may purchase"
 "not authorized","non autorizzato"
 "password","password"
 "to account","al tuo account"
