--- a/core/i18n/resource/i18n/nl-NL.csv
+++ b/core/i18n/resource/i18n/nl-NL.csv
@@ -38,7 +38,7 @@ Subtotal incl. tax,Subtotaal incl. BTW
 The product is out of stock and cannot be added to Cart!,Dit product is niet in voorraad en kan niet toegevoegd worden aan de winkelwagen!
 The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.,Het is niet duidelijk hoeveel producten er exact op voorraad zijn. Het product is toegevoegd aan de winkelwagen als reservering.
 We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.,"U heeft geen internetverbinding. U kunt nog steeds een bestelling plaatsen. We laten het weten als de door u bestelde producten niet op voorraad zijn, dit kunnen we momenteel niet controleren."
-This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!,"Helaas, deze feature is nog niet geimplementeerd. Kijk op https://github.com/DivanteLtd/vue-storefront/issues om de roadmap te zien."
+This feature is not implemented yet!,"Helaas, deze feature is nog niet geimplementeerd."
 Type what you are looking for...,Waar bent u naar op zoek?
 You are logged in!,U bent ingelogd!
 You're logged out,Je bent uitgelogd
