--- a/core/i18n/resource/i18n/pt-BR.csv
+++ b/core/i18n/resource/i18n/pt-BR.csv
@@ -37,7 +37,7 @@
 "The product is out of stock and cannot be added to Cart!","Produto não possui estoque e não pode ser adicionado ao carrinho!"
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","O sistema não tem certeza sobre a quantidade em estoque (volátil). O produto foi adicionado ao carrinho em pré-reserva."
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Sem conexão de Internet. Você ainda pode finalizar seu pedido. Assim que possível o notificaremos se os produtos solicitados não estiverem disponíveis."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Essa funcionalidade não foi implementada ainda! Por favor verifique nosso planejamento em https://github.com/DivanteLtd/vue-storefront/issues"
+"This feature is not implemented yet!","Essa funcionalidade não foi implementada ainda!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Digite o que você está buscando..."
 "Unhandled error, wrong response format!","Erro desconhecido, formato de retorno errado!"
