--- a/core/i18n/resource/i18n/ru-RU.csv
+++ b/core/i18n/resource/i18n/ru-RU.csv
@@ -34,7 +34,7 @@
 "The product is out of stock and cannot be added to Cart!","Товара нет в наличии и его нельзя добавить в корзину"
 "The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Система не может удостовериться в наличии необходимого количества (изменчиво). Товар добавлен в корзину для предварительного бронирования."
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Отсутствует соединение к интернету. Однако вы можете оформить заказ. Мы уведомим Вас об отсутствии какого-либо из заказанных товаров позднее, так как не можем проверить это в данный момент."
-"This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Данная возможность пока не реализована! Пожалуйста ознакомьтесь с нашей дорожной картой тут: https://github.com/DivanteLtd/vue-storefront/issues"
+"This feature is not implemented yet!","Данная возможность пока не реализована!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Введите то что Вы ищите..."
 "Unhandled error, wrong response format!","Необработанная ошибка, неверный формат ответа!"
