translated all countries in Store

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -269,150 +269,150 @@
 "Iceland","Исландия"
 "India","Индия"
 "Indonesia","Индонезия"
-"Iran","Iran"
-"Iraq","Iraq"
-"Ireland","Ireland"
-"Isle of Man","Isle of Man"
-"Israel","Israel"
-"Jamaica","Jamaica"
-"Jersey","Jersey"
-"Japan","Japan"
-"Jordan","Jordan"
-"Kazakhstan","Kazakhstan"
-"Kenya","Kenya"
-"Kuwait","Kuwait"
-"Kiribati","Kiribati"
-"Kyrgyzstan","Kyrgyzstan"
-"Laos","Laos"
-"Latvia","Latvia"
-"Lebanon","Lebanon"
-"Lesotho","Lesotho"
-"Liberia","Liberia"
-"Libya","Libya"
-"Liechtenstein","Liechtenstein"
-"Lithuania","Lithuania"
-"Luxembourg","Luxembourg"
-"Macau SAR China","Macau SAR China"
-"Macedonia","Macedonia"
-"Madagascar","Madagascar"
-"Malaysia","Malaysia"
-"Malawi","Malawi"
-"Maldives","Maldives"
-"Mali","Mali"
-"Malta","Malta"
-"Marshall Islands","Marshall Islands"
-"Martinique","Martinique"
-"Mauritania","Mauritania"
-"Mauritius","Mauritius"
-"Mayotte","Mayotte"
-"Micronesia","Micronesia"
-"Mexico","Mexico"
-"Mongolia","Mongolia"
-"Moldova","Moldova"
-"Monaco","Monaco"
-"Montenegro","Montenegro"
-"Montserrat","Montserrat"
-"Morocco","Morocco"
-"Mozambique","Mozambique"
-"Myanmar [Burma]","Myanmar [Burma]"
-"Namibia","Namibia"
-"Nauru","Nauru"
-"Nepal","Nepal"
-"Netherlands Antilles","Netherlands Antilles"
-"Netherlands","Netherlands"
-"New Caledonia","New Caledonia"
-"New Zealand","New Zealand"
-"Nicaragua","Nicaragua"
-"Niger","Niger"
-"Nigeria","Nigeria"
-"Niue","Niue"
-"Norfolk Island","Norfolk Island"
-"North Korea","North Korea"
-"Northern Mariana Islands","Northern Mariana Islands"
-"Norway","Norway"
-"Oman","Oman"
-"Pakistan","Pakistan"
-"Palau","Palau"
-"Palestinian Territories","Palestinian Territories"
-"Panama","Panama"
-"Papua New Guinea","Papua New Guinea"
-"Paraguay","Paraguay"
-"Peru","Peru"
-"Philippines","Philippines"
-"Pitcairn Islands","Pitcairn Islands"
-"Portugal","Portugal"
-"Puerto Rico","Puerto Rico"
-"Qatar","Qatar"
-"Russia","Russia"
-"Rwanda","Rwanda"
-"Réunion","Réunion"
-"Saint Barthélemy","Saint Barthélemy"
-"Saint Helena","Saint Helena"
-"Saint Kitts and Nevis","Saint Kitts and Nevis"
-"Saint Lucia","Saint Lucia"
-"Saint Martin","Saint Martin"
-"Saint Pierre and Miquelon","Saint Pierre and Miquelon"
-"Saint Vincent and the Grenadines","Saint Vincent and the Grenadines"
-"Samoa","Samoa"
-"San Marino","San Marino"
-"Saudi Arabia","Saudi Arabia"
-"Senegal","Senegal"
-"Serbia","Serbia"
-"Seychelles","Seychelles"
-"Sierra Leone","Sierra Leone"
-"Singapore","Singapore"
-"Solomon Islands","Solomon Islands"
-"Somalia","Somalia"
-"South Africa","South Africa"
-"South Georgia and the South Sandwich Islands","South Georgia and the South Sandwich Islands"
-"South Korea","South Korea"
-"Spain","Spain"
-"Sri Lanka","Sri Lanka"
-"Sudan","Sudan"
-"Suriname","Suriname"
-"Svalbard and Jan Mayen","Svalbard and Jan Mayen"
-"Swaziland","Swaziland"
-"Sweden","Sweden"
-"Switzerland","Switzerland"
-"Syria","Syria"
-"São Tomé and Príncipe","São Tomé and Príncipe"
-"Taiwan","Taiwan"
-"Tajikistan","Tajikistan"
-"Tanzania","Tanzania"
-"Thailand","Thailand"
-"Timor","Timor"
-"Togo","Togo"
-"Tokelau","Tokelau"
-"Tonga","Tonga"
-"Trinidad and Tobago","Trinidad and Tobago"
-"Tunisia","Tunisia"
-"Turkey","Turkey"
-"Turkmenistan","Turkmenistan"
-"Turks and Caicos Islands","Turks and Caicos Islands"
-"U.S. Minor Outlying Islands","U.S. Minor Outlying Islands"
-"Tuvalu","Tuvalu"
-"U.S. Virgin Islands","U.S. Virgin Islands"
-"Uganda","Uganda"
-"Ukraine","Ukraine"
-"United Arab Emirates","United Arab Emirates"
-"United Kingdom","United Kingdom"
-"Uruguay","Uruguay"
-"Uzbekistan","Uzbekistan"
-"Vanuatu","Vanuatu"
-"Vatican City","Vatican City"
-"Venezuela","Venezuela"
-"Vietnam","Vietnam"
-"Wallis and Futuna","Wallis and Futuna"
-"Western Sahara","Western Sahara"
-"Yemen","Yemen"
-"Zambia","Zambia"
-"Zimbabwe","Zimbabwe"
-"Åland Islands","Åland Islands"
-"Transaction is being processed","Transaction is being processed"
-"Please Wait...","Please Wait..."
-"What are the next steps?","What are the next steps?"
-"Shipping Address","Shipping Address"
-"FAQ","FAQ"
-"Suggested Products","Suggested Products"
-"Shipping Fee","Shipping Fee"
-"VAT (Included)","VAT (Included)"
+"Iran","Иран"
+"Iraq","Ирак"
+"Ireland","Ирландия"
+"Isle of Man","Остров Ман"
+"Israel","Израел"
+"Jamaica","Ямайка"
+"Jersey","Джърси"
+"Japan","Япония"
+"Jordan","Йордания"
+"Kazakhstan","Казахстан"
+"Kenya","Кения"
+"Kuwait","Кувейт"
+"Kiribati","Кирибати"
+"Kyrgyzstan","Киргизстан"
+"Laos","Лаос"
+"Latvia","Латвия"
+"Lebanon","Ливан"
+"Lesotho","Лесото"
+"Liberia","Либерия"
+"Libya","Либия"
+"Liechtenstein","Лихтенщайн"
+"Lithuania","Литва"
+"Luxembourg","Люксембург"
+"Macau SAR China","Макао, Китай"
+"Macedonia","Македония"
+"Madagascar","Мадагаскар"
+"Malaysia","Малайзия"
+"Malawi","Малави"
+"Maldives","Малдиви"
+"Mali","Мали"
+"Malta","Малта"
+"Marshall Islands","Маршалови острови"
+"Martinique","Мартиника"
+"Mauritania","Мавритания"
+"Mauritius","Мавриций"
+"Mayotte","Майот"
+"Micronesia","Микронезия"
+"Mexico","Мексико"
+"Mongolia","Монголия"
+"Moldova","Молдова"
+"Monaco","Монако"
+"Montenegro","Черна гора"
+"Montserrat","Монсерат"
+"Morocco","Мароко"
+"Mozambique","Мозамбик"
+"Myanmar [Burma]","Мианмар [Бирма]"
+"Namibia","Намибия"
+"Nauru","Науру"
+"Nepal","Непал"
+"Netherlands Antilles","Холандски Антили"
+"Netherlands","Холандия"
+"New Caledonia","Нова Каледония"
+"New Zealand","Нова Зеландия"
+"Nicaragua","Никарагуа"
+"Niger","Нигер"
+"Nigeria","Нигерия"
+"Niue","Ниуе"
+"Norfolk Island","о-в Норфолк"
+"North Korea","Северна Корея"
+"Northern Mariana Islands","Северни Мариански острови"
+"Norway","Норвегия"
+"Oman","Оман"
+"Pakistan","Пакистан"
+"Palau","Палау"
+"Palestinian Territories","Палестински територии"
+"Panama","Панама"
+"Papua New Guinea","Папуа-Нова Гвинея"
+"Paraguay","Парагвай"
+"Peru","Перу"
+"Philippines","Филипини"
+"Pitcairn Islands","о-вите Питкерн"
+"Portugal","Португалия"
+"Puerto Rico","Пуерто Рико"
+"Qatar","Катар"
+"Russia","Русия"
+"Rwanda","Руанда"
+"Réunion","о-в Реюнион"
+"Saint Barthélemy","Свети Вартоломей"
+"Saint Helena","Света Елена"
+"Saint Kitts and Nevis","Сейнт Китс и Невис"
+"Saint Lucia","Сейнт Лусия"
+"Saint Martin","Сен-Мартин"
+"Saint Pierre and Miquelon","Сен Пиер и Микелон"
+"Saint Vincent and the Grenadines","Сейнт Винсент и Гренадини"
+"Samoa","Самоа"
+"San Marino","Сан Марино"
+"Saudi Arabia","Саудитска Арабия"
+"Senegal","Сенегал"
+"Serbia","Сърбия"
+"Seychelles","Сейшелски острови"
+"Sierra Leone","Сиера Леоне"
+"Singapore","Сингапур"
+"Solomon Islands","Соломонови острови"
+"Somalia","Сомалия"
+"South Africa","Южна Африка"
+"South Georgia and the South Sandwich Islands","Южна Джорджия и Южните сандвичеви о-ви"
+"South Korea","Южна Кореа"
+"Spain","Испания"
+"Sri Lanka","Шри Ланка"
+"Sudan","Судан"
+"Suriname","Суринам"
+"Svalbard and Jan Mayen","Шпицберген и Ян Майен"
+"Swaziland","Свазиленд"
+"Sweden","Швеция"
+"Switzerland","Швейцария"
+"Syria","Сирия"
+"São Tomé and Príncipe","Сао Томе и Принсипи"
+"Taiwan","Тайван"
+"Tajikistan","Таджикистан"
+"Tanzania","Танзания"
+"Thailand","Тайланд"
+"Timor","Тимор"
+"Togo","Того"
+"Tokelau","Токелау"
+"Tonga","Тонга"
+"Trinidad and Tobago","Тринидад и Тобаго"
+"Tunisia","Тунис"
+"Turkey","Турция"
+"Turkmenistan","Туркменистан"
+"Turks and Caicos Islands","о-ви Търкс и Кайкос"
+"U.S. Minor Outlying Islands","Малки отдалечени о-ви на САЩ"
+"Tuvalu","Тувалу"
+"U.S. Virgin Islands","Американски Вирджински о-ви"
+"Uganda","Уганда"
+"Ukraine","Украйна"
+"United Arab Emirates","Обединени арабски емирства"
+"United Kingdom","Великобритания"
+"Uruguay","Уругвай"
+"Uzbekistan","Узбекистан"
+"Vanuatu","Вануату"
+"Vatican City","Ватикана"
+"Venezuela","Венецуела"
+"Vietnam","Виетнам"
+"Wallis and Futuna","Уолис и Футуна"
+"Western Sahara","Западна Сахара"
+"Yemen","Йемен"
+"Zambia","Замбия"
+"Zimbabwe","Зимбабве"
+"Åland Islands","Оландските о-ви"
+"The transaction is being processed","Транзакцията се обработва"
+"Please Wait...","Моля Изчакайте..."
+"What are the next steps?","Какви са следващите стъпки?"
+"Shipping Address","Адрес за доставка"
+"FAQ","ЧЗВ"
+"Suggested Products","Предложени продукти"
+"Shipping Fee","Такса Доставка"
+"VAT (Included)","с ДДС"
