--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -408,7 +408,7 @@
 "Zambia","Zambia"
 "Zimbabwe","Zimbabwe"
 "Åland Islands","Åland Islands"
-"Transaction is being processed","Transaction is being processed"
+"The transaction is being processed","The transaction is being processed"
 "Please Wait...","Please Wait..."
 "What are the next steps?","What are the next steps?"
 "Shipping Address","Shipping Address"
